<resources>
    <string name="app_name">IMSC BIT</string>
    <string name="course_syllabus">Course Syllabus</string>
    <string name="title_activity_sem_physics">Sem_physics</string>
    <string name="sem_1">Sem 1</string>
    <string name="sem_2">Sem 2</string>
    <string name="sem_3">Sem 3</string>
    <string name="sem_4">Sem 4</string>
    <string name="sem_5">Sem 5</string>
    <string name="sem_6">Sem 6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mechanics">Mechanics</string>
    <string name="electricity_magnetism"><![CDATA[Electricity & Magnetism]]></string>
    <string name="buisness_communications">Business Communications</string>
    <string name="chemistry_1">Chemistry I</string>
    <string name="mathematical_physics_1">Mathematical Physics-I</string>
    <string name="waves_and_optics">Waves and Optics</string>
    <string name="mathematics_iii">Mathematics III</string>
    <string name="environmental_science">Environmental Science</string>
    <string name="electives">Electives</string>
    <string name="programming_for_problem_solving_basics_of_electrical_engineering_basics_of_electronics_communication_engg_basics_of_mechanical_engg"><![CDATA[Programming for problem solving / Basics of Electrical Engineering / Basics of Electronics & Communication Engg. / Basics of Mechanical Engg]]></string>
    <string name="thermal_physics">Thermal Physics</string>
    <string name="digital_systems_and_applications">Digital Systems and Applications</string>
    <string name="classical_dynamics">Classical Dynamics</string>
    <string name="chemistry_ii">Chemistry II</string>
    <string name="open_elective_i">Open Elective-I</string>
    <string name="mathematical_physics_ii">Mathematical Physics II</string>
    <string name="elements_of_modern_physics">Elements of Modern Physics</string>
    <string name="analog_systems_and_applications">Analog Systems and Applications</string>
    <string name="mathematics_iv">Mathematics IV</string>
    <string name="quantum_mechanics_and_applications">Quantum Mechanics and Applications</string>
    <string name="solid_state_physics">Solid State Physics</string>
    <string name="probability_and_statistics">Probability and Statistics</string>
    <string name="pe_i">PE-I</string>
    <string name="pe_ii">PE-II</string>
    <string name="electromagnetic_theory">Electromagnetic Theory</string>
    <string name="statistical_mechanics">Statistical Mechanics</string>
    <string name="pe_iii">PE -III</string>
    <string name="pe_iv">PE -IV</string>
    <string name="module_1">Module 1:</string>
    <string name="module_2">Module 2:</string>
    <string name="module_3">Module 3:</string>
    <string name="module_4">Module 4:</string>
    <string name="module_5">Module 5:</string>
    <string name="reference_books">Reference Books:</string>
    <string name="additional_reference_books">Additional Reference Books:</string>
    <string name="advanced_mathematical_physics">ADVANCED MATHEMATICAL PHYSICS</string>
    <string name="nano_materials_and_applications">Nano Materials and Applications</string>
    <string name="computational_physics">Computational Physics</string>
    <string name="materials_science_and_nanotechnology">Materials Science and Nanotechnology</string>
    <string name="experimental_techniques">EXPERIMENTAL TECHNIQUES</string>
    <string name="nonconventional_sources_of_energy">Nonconventional Sources of Energy</string>
    <string name="introduction_to_nuclear_and_particle_physics">Introduction to Nuclear and Particle Physics</string>
    <string name="nuclear_hazard_and_waste_managements">Nuclear Hazard and Waste Managements</string>
    <string name="atmospheric_physics">Atmospheric Physics</string>
    <string name="advanced_experimental_techniques">Advanced Experimental Techniques</string>

    <string name="basics_of_electrical_engineering">Basics of Electrical Engineering</string>
    <string name="basics_of_electronics_and_communication_engg">Basics of Electronics and Communication Engg.</string>
    <string name="basics_of_mechanical_engg">Basics of Mechanical Engg</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="select_no_of_semester" />
    <string name="calculate">Calculate</string>
    <string name="cgpa">CGPA:</string>
    <string name="attendance_calculator">Attendance Calculator</string>
    <string name="about_app">About App</string>
    <string name="class_attended">Class Attended</string>
    <string name="total_classes">Total Classes</string>
    <string name="imsc_bit">IMSC BIT</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developed_by">Developed By: Aditya Khandelwal (BE/10188/17)</string>
    <string name="compatible_with">Compatible with min. SDK version 19</string>
    <string name="email_adityakedawat_yahoo_com">Email: adityakedawat@yahoo.com</string>
    <string name="imsc_mathematics">IMSC Mathematics</string>
    <string name="imsc_chemistry">IMSC Chemistry</string>
    <string name="imsc_physics">IMSC PHYSICS</string>
    <string name="calculus_i">Calculus-I</string>
    <string name="real_analysis">Real Analysis</string>
    <string name="matrix_theory">Matrix Theory</string>
    <string name="calculus_ii">Calculus-II</string>
    <string name="ordinary_differential_equations">Ordinary Differential Equations</string>
    <string name="complex_analysis">Complex Analysis</string>
    <string name="physics_i">Physics I</string>
    <string name="programming_for_problem_solving">Programming for problem solving</string>
    <string name="partial_differential_equations">Partial Differential Equations</string>
    <string name="modern_algebra">Modern Algebra</string>
    <string name="integral_transforms_and_its_applications">Integral Transforms and its Applications</string>
    <string name="data_structure">Data Structure</string>
    <string name="physics_ii">Physics –II</string>
    <string name="discrete_mathematics">Discrete Mathematics</string>
    <string name="linear_algebra">Linear Algebra</string>
    <string name="integral_equations_and_green_s_function">Integral Equations and Green’s Function</string>
    <string name="object_oriented_programming_and_design_pattern">Object Oriented Programming and Design Pattern</string>

    <string name="fuzzy_logic">Fuzzy Logic</string>
    <string name="design_and_analysis_of_algorithm">Design and Analysis of Algorithm</string>
    <string name="formal_languages_automata_theory"><![CDATA[Formal Languages & Automata Theory]]></string>
    <string name="optimization_techniques">Optimization Techniques</string>
    <string name="numerical_techniques">Numerical Techniques</string>
    <string name="database_management_system">Database Management System</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="erp">ERP</string>
    <string name="training_and_placement">Training and Placement</string>
    <string name="tensor_analysis">Tensor Analysis</string>
    <string name="graph_theory">Graph Theory</string>
    <string name="special_funtions">Special Funtions</string>
    <string name="computational_linear_algebra">Computational Linear Algebra</string>
    <string name="difference_equations">Difference Equations</string>
    <string name="introduction_to_distributed_system">Introduction to Distributed System</string>
    <string name="soft_computing">Soft Computing</string>
    <string name="combinatorics">Combinatorics</string>
    <string name="fuzzy_set_theory_and_its_applications">Fuzzy Set Theory and its Applications</string>
    <string name="financial_maths">Financial Maths</string>
    <string name="statistics_quality_control_and_reliability">Statistics Quality Control and Reliability</string>
    <string name="wavelet_transform">Wavelet Transform</string>
    <string name="artificial_neural_network">Artificial Neural Network</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="database_modelling">Database Modelling</string>
    <string name="system_programming">System Programming</string>

    <string-array name="sems">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>

    </string-array>
</resources>