<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/maths_pe4_sub1"
        android:layout_width="match_parent"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/wavelet_transform" />
    <Button
        android:id="@+id/maths_pe4_sub2"
        android:layout_width="match_parent"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/artificial_neural_network" />
    <Button
        android:id="@+id/maths_pe4_sub3"
        android:layout_width="match_parent"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/cloud_computing" />
    <Button
        android:id="@+id/maths_pe4_sub4"
        android:layout_width="match_parent"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/database_modelling" />
    <Button
        android:id="@+id/maths_pe4_sub5"
        android:layout_width="match_parent"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/system_programming" />

</LinearLayout>