<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/sem6_sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_border"
        android:text="@string/electromagnetic_theory" />
    <Button
        android:id="@+id/sem6_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_border"
        android:text="@string/statistical_mechanics" />
    <Button
        android:id="@+id/sem6_sub3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_border"
        android:text="@string/pe_iii" />
    <Button
        android:id="@+id/sem6_sub4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/pe_iv" />


</LinearLayout>