<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/pps_sub1"
        android:layout_width="match_parent"
        android:background="@drawable/button_border"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/programming_for_problem_solving" />
    <Button
        android:id="@+id/pps_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/basics_of_electrical_engineering" />
    <Button
        android:id="@+id/pps_sub3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/basics_of_electronics_and_communication_engg" />
    <Button
        android:id="@+id/pps_sub4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/basics_of_mechanical_engg" />

</LinearLayout>